# documents/swagger.yml
@@ -11,14 +11,14 @@ info:
 host: localhost:8080
 basePath: /moviehall
 tags:
-  - name: movie-hall-controller
+  - name: APIs for managing movie halls
     description: Movie Hall Controller
 paths:
   /book-ticket:
     post:
       tags:
-        - movie-hall-controller
-      summary: bookTicket
+        - APIs for managing movie halls
+      summary: API to book tickets for the given user
       operationId: bookTicketUsingPOST
       consumes:
         - application/json
@@ -33,23 +33,27 @@ paths:
             $ref: '#/definitions/TicketBookingRequestDto'
       responses:
         '200':
-          description: OK
+          description: Successfully booked the ticket
           schema:
             type: string
         '201':
           description: Created
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
           description: Not Found
+        '500':
+          description: Internal server error
       deprecated: false
   /cancel-ticket/{userId}/{ticketId}:
     post:
       tags:
-        - movie-hall-controller
-      summary: cancelTicket
+        - APIs for managing movie halls
+      summary: API to cancel a booked ticket for the given user
       operationId: cancelTicketUsingPOST
       consumes:
         - application/json
@@ -68,23 +72,25 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully cancelled the ticket
           schema:
             type: string
         '201':
           description: Created
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: ticket not found
       deprecated: false
   /movie-hall/{townId}:
     get:
       tags:
-        - movie-hall-controller
-      summary: getMovieHall
+        - APIs for managing movie halls
+      summary: API to fetch all movie halls for the given town
       operationId: getMovieHallUsingGET
       produces:
         - '*/*'
@@ -96,23 +102,25 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully retrieved the movie halls
           schema:
             type: array
             items:
               $ref: '#/definitions/MovieHallResponseDto'
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: town not found
       deprecated: false
   /movie-upload:
     post:
       tags:
-        - movie-hall-controller
-      summary: uploadMovieSchedule
+        - APIs for managing movie halls
+      summary: API to upload movie schedules
       operationId: uploadMovieScheduleUsingPOST
       consumes:
         - application/json
@@ -133,19 +141,25 @@ paths:
           schema:
             type: string
         '201':
-          description: Created
+          description: Successfully created the movie schedule
+          schema:
+            type: string
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
           description: Not Found
+        '500':
+          description: Internal server error
       deprecated: false
   /screen/{movieHallId}:
     get:
       tags:
-        - movie-hall-controller
-      summary: getScreen
+        - APIs for managing movie halls
+      summary: API to fetch screens for the given movie hall
       operationId: getScreenUsingGET
       produces:
         - '*/*'
@@ -157,23 +171,25 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully retrieved the screens
           schema:
             type: array
             items:
               $ref: '#/definitions/ScreenResponseDto'
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: movie hall not found
       deprecated: false
   /seat/{screenId}:
     get:
       tags:
-        - movie-hall-controller
-      summary: getAvailableSeat
+        - APIs for managing movie halls
+      summary: API to fetch the available seats for the given screen
       operationId: getAvailableSeatUsingGET
       produces:
         - '*/*'
@@ -185,23 +201,25 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully retrieved the available seats
           schema:
             type: array
             items:
               $ref: '#/definitions/SeatResponseDto'
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: screen not found
       deprecated: false
   /ticket-report/{hallId}/{date}:
     get:
       tags:
-        - movie-hall-controller
-      summary: getSoldTicketReport
+        - APIs for managing movie halls
+      summary: API to get the reports of sold tickets for the given date and hall
       operationId: getSoldTicketReportUsingGET
       produces:
         - '*/*'
@@ -219,23 +237,25 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully retrieved the report
           schema:
             type: array
             items:
               $ref: '#/definitions/TicketReportResponseDto'
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: report not found
       deprecated: false
   /user/{emailId}/{roleId}:
     post:
       tags:
-        - movie-hall-controller
-      summary: updateRole
+        - APIs for managing movie halls
+      summary: API to update user role
       operationId: updateRoleUsingPOST
       consumes:
         - application/json
@@ -254,17 +274,19 @@ paths:
           type: string
       responses:
         '200':
-          description: OK
+          description: Successfully updated the role
           schema:
             type: string
         '201':
           description: Created
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '403':
           description: Forbidden
         '404':
-          description: Not Found
+          description: user not found
       deprecated: false
 definitions:
   MovieHallResponseDto:
